Few useless changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "weather-app",
+  "name": "dynamic-weather-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -20,7 +20,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
+      "React Weather App",
       "react-app/jest"
     ]
   },
